--- a/content/posts/2018-07-02-LearnMetal-Introducing-Metal.org
+++ b/content/posts/2018-07-02-LearnMetal-Introducing-Metal.org
@@ -4,7 +4,7 @@
 #+CATEGORIES: 学习Metal
 #+LAYOUT: post
 #+OPTIONS: toc:nil
-#+DRAFT: true
+#+DRAFT: false
 
 进入到2018年, Metal已经发布了4年了. 随着WWDC 2018上Apple宣布将在iOS, OS X等平台废弃OpenGL, OpenGL ES等API, 摆在开发者面前一个不得不面对的事实就是, 需要去掌握Metal了.
 
