--- a/content/posts/2018-07-02-LearnMetal-Introducing-Metal.org
+++ b/content/posts/2018-07-02-LearnMetal-Introducing-Metal.org
@@ -8,6 +8,8 @@
 
 进入到2018年, Metal已经发布了4年了. 随着WWDC 2018上Apple宣布将在iOS, OS X等平台废弃OpenGL, OpenGL ES等API, 摆在开发者面前一个不得不面对的事实就是, 需要去掌握Metal了.
 
+# more
+
 | 年份 | iOS | tvOS |  OS X | CPU    | iPhone             | iPad                           | iPad Mini      | Apple TV          | Other  |
 | 2013 | -   | -    |     - | A7     | iPhone 5s          | iPad Air                       | iPad Mini2     | -                 |        |
 | 2014 | v8  | -    |     - | A8     | iPhone 6, 6Plus    | iPad Air2(A8X),                | iPad mini3(A7) |                   |        |
