--- a/content/posts/2018-07-04-LearnMetal-Get-Device.org
+++ b/content/posts/2018-07-04-LearnMetal-Get-Device.org
@@ -76,5 +76,5 @@ for device in devices {
 设备注册ID:    	4294968289
 #+END_QUOTE
 
-源码托管在github:
-[[https://github.com/young40/LearnMetal]]
+
+同样源码托管在github: [[https://github.com/young40/LearnMetal]] . 欢迎star, 感谢!
