--- a/content/posts/2018-07-21-Metal-Shading-Language-note-02.org
+++ b/content/posts/2018-07-21-Metal-Shading-Language-note-02.org
@@ -11,6 +11,8 @@
 
 我们先来看看标量(Scalar).
 
+# more
+
 * 2.1 标量(Scalar)
 
 Metal支持 表1 中的数据类型. Metal不支持各种dobule, long类型. 包括: double, long, unsigned long, long long, unsigned long long, long double.
