--- a/content/posts/2018-06-12-Google-Cloud-F-GFW.org
+++ b/content/posts/2018-06-12-Google-Cloud-F-GFW.org
@@ -1,7 +1,7 @@
 #+TITLE: Google Cloud安装Shadowsocks
 #+DATE: 2018-06-12T23:25:30+08:00
-#+TAGS: Shadowsocks
-#+CATEGORIES: Shadowsocks
+#+TAGS[]: Shadowsocks
+#+CATEGORIES[]: Shadowsocks
 #+LAYOUT: post
 #+OPTIONS: toc:nil
 #+DRAFT: false
