--- a/content/posts/2018-07-22-Metal-Shading-Languae-note-03.org
+++ b/content/posts/2018-07-22-Metal-Shading-Languae-note-03.org
@@ -1,7 +1,7 @@
 #+TITLE: MTSL笔记03: 数据类型 - 向量
 #+DATE: 2018-07-22T00:00:06+08:00
-#+TAGS: metal shader
-#+CATEGORIES: MetalShadingLanguage笔记
+#+TAGS[]: metal shader
+#+CATEGORIES[]: MetalShadingLanguage笔记
 #+LAYOUT: post
 #+OPTIONS: toc:nil
 #+DRAFT: false
