--- a/content/posts/2020-11-25-Unity-Shader-rumen-jingyao-00.org
+++ b/content/posts/2020-11-25-Unity-Shader-rumen-jingyao-00.org
@@ -32,3 +32,22 @@ https://www.zhihu.com/people/lele-feng-15
 
 以下是我关于本书所有笔记索引:
 第1章 欢迎来到Shader的世界 
+第2章 渲染流水线
+第3章 Unity Shader基础
+第4章 学习Shader所需的数学基础
+第5章 开始Unity Shader学习之旅
+第6章 Unity 中的基础光照
+第7章 基础纹理
+第8章 透明效果
+第9章 更复杂的光照
+第10章 高级纹理
+第11章 让画面动起来
+第12章 屏幕后处理效果
+第13章 使用深度和纹理法线
+第14章 非真实感渲染
+第15章 使用噪声
+第16章 Unity 中的渲染优化技术
+第17章 Unity 的表面着色器探秘
+第18章 急于物理的渲染
+第19章 Unity 5 更新了什么
+第20章 还有更多内容吗
