--- a/content/posts/2020-11-25-Unity-Shader-rumen-jingyao-02.org
+++ b/content/posts/2020-11-25-Unity-Shader-rumen-jingyao-02.org
@@ -52,4 +52,26 @@
 - 蓝色代表固定函数阶段无法编程或配置
 
 * 顶点着色器
-每个顶点运行一次顶点着色器, 
+每个顶点(应用阶段被剔除的不会到达这一阶段)运行一次顶点着色器, 主要完成顶点坐标变换和逐顶点光照,
+并输出下一阶段需要的数据. 
+
+最好可以理解:
+- 正交投影, 透视投影, 以及它们对应的变换矩阵
+- 透视除法
+- 齐次裁剪空间
+- 归一化的设备坐标, Normalized Device Coordinates, 简写NDC
+
+* 裁剪
+将不在摄像机视野范围内的图元(以及图元不在视野范围内的部分), 剔除. 裁剪阶段只能配置, 无法编程.
+
+* 屏幕映射
+  
+
+* 参考
+本章涉及到大量的概念和计算, 想要完全弄懂, 需要反复阅读, 推导, 以下是我觉得很好的链接, 希望
+可以给大家更多帮助.
+
+- [[https://blog.csdn.net/softwarekid/article/details/45055253][齐次空间的裁剪]]
+- [[https://blog.csdn.net/wodownload2/article/details/85069240][unity里的正交投影和透视投影]]
+- [[https://www.jianshu.com/p/7e701d7bfd79][写给大家看的“透视除法” —— 齐次坐标和投影]]
+  
