--- a/content/post/2021-06-26-UniRx-Code-Reading-02.org
+++ b/content/post/2021-06-26-UniRx-Code-Reading-02.org
@@ -6,3 +6,26 @@
 #+OPTIONS: toc:nil
 #+DRAFT: true
 
+=Observable= 类由多个文件组成, 如下:
+
+# more
+
+|-----------------------------+------|
+| 文件                        | 说明 |
+|-----------------------------+------|
+| Observable.cs               |      |
+| Observable.Aggregate.cs     |      |
+| Observable.Awaiter.cs       |      |
+| Observable.Binding.cs       |      |
+| Observable.Blocking.cs      |      |
+| Observable.Concatenate.cs   |      |
+| Observable.Concurrency.cs   |      |
+| Observable.Conversions.cs   |      |
+| Observable.Creation.cs      |      |
+| Observable.ErrorHandling.cs |      |
+| Observable.Events.cs        |      |
+| Observable.FromAsync.cs     |      |
+| Observable.Joins.cs         |      |
+| Observable.Paging.cs        |      |
+| Observable.Time.cs          |      |
+|-----------------------------+------|
