--- a/content/post/2021-06-26-UniRx-Code-Reading-02.org
+++ b/content/post/2021-06-26-UniRx-Code-Reading-02.org
@@ -59,5 +59,5 @@
       // Subscribe 函数我们上次分析 Observer.cs文件时有提及.
 #+end_src
 
-翻看个 =Observable.*.cs= 的实现，我们可以看到各函数的实现大体都很短，例如 =Interval= 和 =Delay= 都是返回了一个新的对象。
-可以看出这些文件都是桥接性质，后续我们会分析他们的真正实现。
+翻看个 =Observable.*.cs= 的实现，我们可以看到各函数的实现大体都很短，为桥接性质。例如 =Interval= 和 =Delay= 都是返回了一个新的对象。
+后续我们会分析他们的真正实现。
