--- a/content/post/2021-06-26-UniRx-Code-Reading-03.org
+++ b/content/post/2021-06-26-UniRx-Code-Reading-03.org
@@ -61,3 +61,5 @@
 
 翻看个 =Observable.*.cs= 的实现，我们可以看到各函数的实现大体都很短，为桥接性质。例如 =Interval= 和 =Delay= 都是返回了一个新的对象。
 后续我们会分析他们的真正实现。
+
+从 =Observer= 和 =Observable= 可以看出， 为了统一简便的调用方式， =UniRx= 做了大量的封装(体力劳动).
