--- a/content/post/2021-07-01-Software-Architecture-Principle.org
+++ b/content/post/2021-07-01-Software-Architecture-Principle.org
@@ -36,15 +36,18 @@
 
   封闭，当需求变化时，尽可能不修改源码。
 
-  或许只有积木式的代码， 才能做到在需求有变时，或新增积木（扩张），或改变积木配置顺序，来响应改变。
+  或许只有积木式的代码， 才能做到在需求有变时，或新增积木（扩张），或改变积木配置顺序（配置文件或胶水代码），来响应改变。
   
 * 里氏替换原则  
   理解里氏替换原则， 需要理解著名（臭名昭著）的正方形长方形问题。
 
   如果正方形是长方形的子类，那么同时给正方形对象设置不等的长和宽，会导致正方形的面积和设置的长宽乘积不等。
 
+  里氏替换的关键点在于， 如果一处是调用了父类，那么应该可以安全地被替换为其所有子类，否则要考虑他们之间是否应该存在父子继承关系。
+
   
 * 接口隔离原则  
+  
 * 依赖反转原则  
 * 参考
 - [[https://zh.wikipedia.org/zh-cn/软件架构][维基百科: 软件架构]]
