--- a/content/post/2021-11-22-UGUI-Source-Reading-00.org
+++ b/content/post/2021-11-22-UGUI-Source-Reading-00.org
@@ -65,5 +65,8 @@ Unity在2019.1及之前版本, 以dll的形式提供UGUI, 并在GitHub提供了U
 
 给场景中增加一个 =Button= , 运行后点击一下, 看下日志窗口是否有新的日志打印吧!
 
+* 待修复(填坑)问题
+TextMeshPro 的文字对齐的 icon 显示有问题.  
+
 * 尽情冲浪
 快来一起在UGUI中尽情冲浪🏄‍♀️🏄吧.  
