--- a/content/org/2021-11-22-UGUI-Source-Reading-00.org
+++ b/content/org/2021-11-22-UGUI-Source-Reading-00.org
@@ -1,10 +1,11 @@
 #+TITLE: UGUI源码分析(零): 环境搭建
+#+HUGO_TAGS: Unity UGUI
+#+HUGO_CATEGORIES: UGUI源码分析
 #+DATE: 2021-11-22T16:36:17+08:00
-#+TAGS[]: Unity UGUI
-#+CATEGORIES[]: UGUI源码分析
-#+LAYOUT: post
-#+OPTIONS: toc:nil
-#+DRAFT: false
+#+HUGO_AUTO_SET_LASTMOD: t
+#+HUGO_DRAFT: true
+#+HUGO_BASE_DIR: ../../
+#+OPTIONS: author:nil
 
 有道是, 工欲善其事, 必先利其器. 想研究代码, 最好不过的方式就是边修改边运行看看效果, 研究UGUI自然也不例外.
 我们先看下如何搭建一个可以修改调试UGUI环境.
