--- a/org/2021-12-26-UGUI-Source-Reading-01.org
+++ b/org/2021-12-26-UGUI-Source-Reading-01.org
@@ -5,7 +5,7 @@
 #+DATE: 2021-12-26T11:33:24+08:00
 #+HUGO_AUTO_SET_LASTMOD: t
 #+HUGO_DRAFT: true
-#+HUGO_BASE_DIR: ../../
+#+HUGO_BASE_DIR: ../
 #+OPTIONS: author:nil
 
 我们都知道在Unity中渲染一个3D的物体, 需要提供3D物体的模型, 纹理, 材质甚至Shader. 但我们在制作UI时, 并不需要提供这些(Image还是可以提供材质??????????).
@@ -17,9 +17,9 @@
 我们在Hierarchy窗口创建一个Image(什么? 对象??), 可以在Inspector窗口看到它由 =RectTransform=, =Canvans Renderer=, =Image= 几个Component组成.
 我们可以给 =Image= 组件指定 =Source Image=, =Color=, =Material= 等属性.
 
-我们可以看到 =Image= 组件的源码, 位于 =Runtime/UI/Core/Image.cs=, =Image= 类继承关系如下:
+我们可以看到 =Image= 组件的源码, 位于 =Runtime/UI/Core/Image.cs=, =Image= 渲染相关的类继承关系如下:
 
-#+BEGIN_SRC plantuml :file  2021-12-UGUI-Source-Reading/001.Image-Hierarchy.png :exports both
+#+BEGIN_SRC plantuml :file 2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-001.Image-Hierarchy.png :exports both
   @startuml
   
   namespace UnityEngine.UI {
@@ -41,3 +41,13 @@
 #+RESULTS:
 [[file:2021-12-UGUI-Source-Reading/001.Image-Hierarchy.png]]
 
+
+* Mesh的生成
+ 我们在一个测试Scene中加入一个Image, 并给 =Image= 类的 =OnPopulateMesh= 函数添加断点, 运行调试后, 可以看到如下调用堆栈:
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-002.Debug-OnPopulateMesh.png]]
+
+ 
+ 指定一个sprite.
+
+
+ 
