--- a/org/2021-12-26-UGUI-Source-Reading-01.org
+++ b/org/2021-12-26-UGUI-Source-Reading-01.org
@@ -19,7 +19,7 @@
 
 我们可以看到 =Image= 组件的源码, 位于 =Runtime/UI/Core/Image.cs=, =Image= 渲染相关的类继承关系如下:
 
-#+BEGIN_SRC plantuml :file 2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-001.Image-Hierarchy.png :exports both
+#+BEGIN_SRC plantuml_REMOVE :file 2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-001.Image-Hierarchy.png :exports both
   @startuml
   
   namespace UnityEngine.UI {
@@ -46,7 +46,45 @@
  我们在一个测试Scene中加入一个Image, 并给 =Image= 类的 =OnPopulateMesh= 函数添加断点, 运行调试后, 可以看到如下调用堆栈:
 [[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-002.Debug-OnPopulateMesh.png]]
 
+从上图我们也可以看到, 如果 =activeSprite= 为空的情况下(一般可以理解为在Inspector窗口不设置Source Image), 则会直接调用
+父类 =Graphic= 的 =OnPopulateMesh= 函数, 我们来看下其实现.
+
+#+begin_src csharp
+  protected virtual void OnPopulateMesh(VertexHelper vh)
+  {
+      var r = GetPixelAdjustedRect();
+      var v = new Vector4(r.x, r.y, r.x + r.width, r.y + r.height);
+  
+      Color32 color32 = color;
+      vh.Clear();
+      vh.AddVert(new Vector3(v.x, v.y), color32, new Vector2(0f, 0f)); //左下
+      vh.AddVert(new Vector3(v.x, v.w), color32, new Vector2(0f, 1f)); //左上
+      vh.AddVert(new Vector3(v.z, v.w), color32, new Vector2(1f, 1f)); //右上
+      vh.AddVert(new Vector3(v.z, v.y), color32, new Vector2(1f, 0f)); //右下
+  
+      vh.AddTriangle(0, 1, 2);
+      vh.AddTriangle(2, 3, 0);
+  }
+  
+#+end_src
+
+我们知道, UI元素一般是按四边形来渲染, 即需要两个三角形. 在上面代码中, 可以看到变量 =v= 存储了四边形的左下角和右上角的坐标.
+然后以顺时针顺序把左下角, 左上角, 右上角, 右下角, 当作四个顶点坐标传给 =VertexHelper=, 这四点的顶点索引(Index), 依次为0, 1, 2, 3.
+分别以(0, 1, 2)和(2, 3, 0) 组成两个三角形, 构成了UI元素的Mesh.
+
+我们也看到通过给 =VertexHelper= 的 =AddVert= 函数, 也设置了对应顶点的颜色及纹理坐标.
+
+在Scene窗口的 Wireframe 下, 可以看到上述两个三角形组成的Mesh.
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-003.Scene-Wireframe.png]]
  
+打开Frame Debug可以看到绘制参数, 和顶点信息, 4个顶点, 6个顶点索引.
+
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-004.Frame-Debug.png]]
+
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-005.Frame-Debug-Preview-Vertices.png]]
+
+
+
  指定一个sprite.
 
 
