--- a/org/2021-11-22-UGUI-Source-Reading-00.org
+++ b/org/2021-11-22-UGUI-Source-Reading-00.org
@@ -3,7 +3,7 @@
 #+HUGO_CATEGORIES: UGUI源码分析
 #+DATE: 2021-11-22T16:36:17+08:00
 #+HUGO_AUTO_SET_LASTMOD: t
-#+HUGO_DRAFT: true
+#+HUGO_DRAFT: false
 #+HUGO_BASE_DIR: ../../
 #+OPTIONS: author:nil
 
