--- a/org/2021-12-26-UGUI-Source-Reading-01.org
+++ b/org/2021-12-26-UGUI-Source-Reading-01.org
@@ -4,7 +4,7 @@
 #+HUGO_CATEGORIES: UGUI源码分析
 #+DATE: 2022-01-03T00:13:53+08:00
 #+HUGO_AUTO_SET_LASTMOD: t
-#+HUGO_DRAFT: true
+#+HUGO_DRAFT: false
 #+HUGO_BASE_DIR: ../
 #+OPTIONS: author:nil
 
