--- a/content/post/math.org
+++ b/content/post/math.org
@@ -1,4 +1,4 @@
-#+TITLE: sssssss
+#+TITLE: math test
 #+DATE: 2021-12-17T15:08:53+08:00
 #+TAGS[]: 
 #+CATEGORIES[]: 
@@ -6,6 +6,8 @@
 #+OPTIONS: toc:nil
 #+DRAFT: true
 
+test
+# more
 
 #+begin_src 
   
