--- a/org/2021-11-22-UGUI-Source-Reading-00.org
+++ b/org/2021-11-22-UGUI-Source-Reading-00.org
@@ -4,7 +4,7 @@
 #+DATE: 2021-11-22T16:36:17+08:00
 #+HUGO_AUTO_SET_LASTMOD: t
 #+HUGO_DRAFT: false
-#+HUGO_BASE_DIR: ../../
+#+HUGO_BASE_DIR: ../
 #+OPTIONS: author:nil
 
 有道是, 工欲善其事, 必先利其器. 想研究代码, 最好不过的方式就是边修改边运行看看效果, 研究UGUI自然也不例外.
@@ -22,17 +22,17 @@ Unity在2019.1及之前版本, 以dll的形式提供UGUI, 并在GitHub提供了U
 我选择了当前最新的2021.2.3f1版本(macOS), 相信环境搭建也适用2019.2以后版本. 至于2019.1及以前版本, 网上有很多教程, 大家可以参考一下.
 
 * 操作步骤
-*** 1. 新建项目
+ * 1. 新建项目
 使用2021.2.3f1版本新建项目, 建议用git将项目托管起来, 方便查看及保存修改记录.
-*** 2. 导入TextMeshPro插件资源
+ * 2. 导入TextMeshPro插件资源
 从菜单 =Window => TextMeshPro => Import TMP Essential Resources= 导入TextMeshPro插件资源.
     
-*** 3. 复制插件
+ * 3. 复制插件
 我们需要将UGUI和TextMeshPro插件先保存起来. 正常打开上一步中新建的项目, 将项目目录下Library/PackageCache下
 =com.unity.ugui@1.0.0=, =com.unity.textmeshpro@3.0.6=, =com.unity.visualscripting@1.7.5= 目录, 复制到项目Assets目录.
 可以将目录重命名为更简单的名字, 方便后序使用.
 
-*** 4. 删除插件引用
+ * 4. 删除插件引用
 使用文本编辑器打开 =Packages/manifest.json= 删除如下插件:
 
 ="com.unity.textmeshpro": "3.0.6"=
@@ -48,7 +48,7 @@ Unity在2019.1及之前版本, 以dll的形式提供UGUI, 并在GitHub提供了U
 
 未来不排除有更多插件依赖UGUI, 可以查看依赖关系后, 也同样做删除操作.
 #+end_quote
-*** 5. 验证
+ * 5. 验证
 修改 UGUI目录下 =Runtime/UI/Core/Button.cs= , 找到 =Press()= 函数, 给其增加一行日志打印.
 
 #+begin_src csharp
